# gtk4-layer-shell

./: CHANGELOG.md  LICENSE  README.md  layer_shell_preload.md  linking.md  meson.build  meson_options.txt  release_process.md
.github/workflows/: build_and_test.yml  deploy_docs.yml
doc/: gtk-layer-shell-docs.sgml  gtk4-layer-shell-docs.sgml  meson.build
doc/xml/: meson.build
examples/: meson.build  session-lock.c  session-lock.py  simple-example.c  simple-example.lua  simple-example.py  simple-example.vala
examples/demo/: anchor-control.c  gtk-layer-demo.c  gtk-layer-demo.h  keyboard-selection.c  layer-selection.c  margin-control.c  menu-bar.c  monitor-selection.c  mscl-toggles.c  version-info.c
examples/vala-standalone/: README.md  main.vala  meson.build
include/: gtk-layer-shell.h  gtk4-layer-shell.h  gtk4-session-lock.h  meson.build
protocol/: meson.build
src/: api.c  gtk4-layer-shell.c  gtk4-session-lock.c  layer-shell-preload.c  layer-surface.c  layer-surface.h  libwayland-shim.c  libwayland-shim.h  libwayland-wrappers.c  libwayland-wrappers.h  lock-surface.c  lock-surface.h  meson.build  registry.c  registry.h  session-lock.c  session-lock.h  stolen-from-libwayland.c  stolen-from-libwayland.h  stubbed-surface.c  stubbed-surface.h  wayland-utils.c  wayland-utils.h  xdg-surface-server.c  xdg-surface-server.h
test/: Containerfile  README.md  check-all-tests-are-in-meson.py  meson.build  run-integration-test.py  tests-not-enabled.py
test/integration-test-common/: integration-test-common.c  integration-test-common.h
test/integration-tests/: meson.build  test-adapts-to-screen-size.c  test-auto-exclusive-zone-no-margin.c  test-auto-exclusive-zone-weird-bool-values.c  test-auto-exclusive-zone-with-margin.c  test-close-layer-surface.c  test-create-subsurface.c  test-create-xdg-toplevel.c  test-creation-properties.c  test-exclusive-zone-below-negative-1.c  test-expect-fail.c  test-get-auto-exclusive-zone.c  test-get-explicit-exclusive-zone.c  test-get-keyboard-interactivity.c  test-get-keyboard-mode.c  test-get-layer.c  test-get-margin.c  test-get-monitor.c  test-get-namespace-custom-namespace.c  test-get-namespace-default.c  test-get-namespace-on-non-layer-window.c  test-hide-and-show.c  test-init-after-window-created.c  test-is-layer-window.c  test-is-supported-true.c  test-layer-surface-not-created.c  test-menu-popup.c  test-multi-anchors.c  test-set-anchor-normalizes-booleans.c  test-set-default-size.c  test-set-keyboard-interactivity.c  test-set-keyboard-mode.c  test-set-layer.c  test-set-margin.c  test-set-monitor.c  test-set-size-request.c  test-single-anchors.c  test-uses-widget-size.c  test-window-with-initially-attached-buffer.c
test/layer-tests/: meson.build  test-adapts-to-screen-size.c  test-auto-exclusive-zone-no-margin-2.c  test-auto-exclusive-zone-no-margin.c  test-auto-exclusive-zone-weird-bool-values.c  test-auto-exclusive-zone-with-margin.c  test-close-layer-surface.c  test-configure-delay.c  test-create-xdg-toplevel.c  test-destroy-direct.c  test-exclusive-zone-below-negative-1.c  test-get-explicit-exclusive-zone.c  test-get-keyboard-mode.c  test-get-namespace-on-non-layer-window.c  test-immediate-close.c  test-init-after-window-created.c  test-is-supported-true.c  test-layer-surface-click-activated-popup.c  test-layer-surface-not-created.c  test-layer-surface-popup.c  test-menu-popup.c  test-monitor-destroyed-before-configure.c  test-monitor-removed.c  test-only-monitor-removed.c  test-popup-configure-delay.c  test-remap-namespace.c  test-respect-close.c  test-set-anchor-normalizes-booleans.c  test-set-default-size.c  test-set-exclusive-edge-enabled.c  test-set-explicit-exclusive-zone.c  test-set-margin.c  test-set-monitor.c  test-single-anchors.c  test-uses-widget-size.c  test-xdg-toplevel-popup-with-layer-surface.c  test-xdg-toplevel-popup-without-layer-surface.c
test/lock-tests/: meson.build  test-async-failure-application-window.c  test-async-failure.c  test-can-lock-display.c  test-can-relock-display.c  test-can-reuse-lock-window.c  test-can-unlock-application-window.c  test-immediate-failure.c  test-lock-can-be-created-without-locking.c  test-monitors-changed-after-unlocked.c  test-monitors-changed-while-locked.c  test-multiple-monitors.c  test-popup-on-lock-screen.c  test-works-without-monitor-signal.c
test/mock-server/: mock-server.c  mock-server.h  overrides.c
test/smoke-tests/: meson.build  smoke_test_common.py  test-c-demo.py  test-c-example.py  test-c-session-lock.py  test-lua-example.py  test-python-example.py  test-python-session-lock.py  test-vala-example.py
test/test-common/: test-common.h
test/unit-tests/: meson.build  test-get-version.c
