integration_tests = [
    'test-is-supported-true',
    'test-layer-surface-not-created',
    'test-creation-properties',
    'test-is-layer-window',
    'test-single-anchors',
    'test-multi-anchors',
    'test-set-anchor-normalizes-booleans',
    'test-set-layer',
    'test-get-layer',
    'test-set-margin',
    'test-get-margin',
    'test-set-default-size',
    'test-adapts-to-screen-size',
    'test-auto-exclusive-zone-no-margin',
    'test-auto-exclusive-zone-with-margin',
    'test-auto-exclusive-zone-weird-bool-values',
    'test-get-explicit-exclusive-zone',
    'test-get-auto-exclusive-zone',
    'test-exclusive-zone-below-negative-1',
    'test-menu-popup',
    'test-close-layer-surface',
    'test-get-namespace-default',
    'test-get-namespace-on-non-layer-window',
    'test-get-namespace-custom-namespace',
    'test-set-keyboard-mode',
    'test-get-keyboard-mode',
    'test-get-monitor',
    'test-set-monitor',
    'test-create-xdg-toplevel',
    'test-hide-and-show',
    'test-init-after-window-created',
]
