lock_tests = [
    'test-lock-can-be-created-without-locking',
    'test-can-lock-display',
    'test-can-relock-display',
    'test-can-reuse-lock-window',
    'test-multiple-monitors',
    'test-monitors-changed-while-locked',
    'test-immediate-failure',
    'test-async-failure',
    'test-popup-on-lock-screen',
    'test-works-without-monitor-signal',
]
