lock_tests = [
    'test-lock-can-be-created-without-locking',
    'test-can-lock-display',
    'test-can-relock-display',
    'test-can-reuse-lock-window',
    'test-multiple-monitors',
    'test-monitors-changed-while-locked',
    'test-monitors-changed-after-unlocked',
    'test-immediate-failure',
    'test-async-failure',
    'test-async-failure-application-window',
    'test-popup-on-lock-screen',
    'test-works-without-monitor-signal',
    'test-can-unlock-application-window',
]
